- Feature: Added support for "LATC1" and "LATC2" (formally "3DC"/"ATI1N"/"ATI2N" on ATI GPU's only) texture compression
- Feature: Cg shader language support is now optional (PLRendererOpenGLCg plugin) instead of directly build in within PLRendererOpenGL
- Feature: Deferred scene renderer and HDR compositing steps are now supporting GLSL as well instead of just Cg
- Change: Updated from "Cg Toolkit 2.2, February 2010 Release" to "Cg Toookit 3.0 - July 2010"
- Change: Introduced new "PLRenderer::ShaderLanguage" interface, removed "Create<Type>Shader()" and "CreateProgram()" within "PLRenderer::Renderer"
- Change: Camera zoom input control modifier "PLScene::SNMCameraZoom" was replaced by "PLScene::SNMCameraZoomController"
- Change: "PLPhysics::SNMPhysicsCharacterController" is now using a virtual input controller instead of accessing input devices directly
- Change: "PLPhysics::SNPhysicsMouseInteraction" is now using a virtual input controller instead of accessing input devices directly
- Change: "PLScene::SNMMoveController" is now using a virtual input controller instead of accessing input devices directly
- Change: New "PLScene::SNMLookController" scene node modifier as replacement for "PLScene::SNMMouseLookController"
- Change: Renamed "PLScene::SNMMouseOrbitingController" scene node modifier into "PLScene::SNMOrbitingController"
- Removed: Old shader interface within PLRenderer
- Removed: "PLScene::SNMMouseMoveController", use "PLScene::SNMMoveController" with virtual input controller instead
- Bugfix: Within some GLSL shaders, the not specified "clamp(float, int, int)" was used, which didn't work on every system
- Bugfix: Fixed PLDemoRendererRTT graphics bug
- Bugfix (Windows): The precompiled PLDemoNetworkChat binary within the SDK is now a correct console application


Changes in PixelLight 0.9.2-R2 (released on August 27, 2010)
- Bugfix (Windows): Wrong dependency to debug version of MSVC runtime fixed (libfreetype)

